# EmbedDb

./: CMakeLists.txt  README.md  README.txt  build_run.bat  build_run.sh  run.txt
demo/: index.html  script.js  style.css  styles.css
documentation/: sys.md
implement/: README.md  tensor_store.cpp  tensor_store.h
implement/demo/: app.js  index.html  styles.css
implement/python_demo/: dl_model_demo.py  sst_000000.sst  tensor_payload.txt  weights_baseline.json
src/: database.cpp  database.h  main.cpp  memtable.cpp  memtable.h  sstable.cpp  sstable.h  wal.cpp  wal.h
